# flac-lame-frontend

./: .gitignore  .gitmodules  Cargo.toml  FlacLameFE.ini  FlacLameFE.sln  FlacLameFE.vcproj  FlacLameFE.vcxproj  FlacLameFE.vcxproj.filters  LICENSE.md  README.md  build.rs  combo.h  datetime.h  device_context.h  dictionary.h  download.h  file.h  file_ini.h  flac-lame-frontend.ini  flac-lame-frontend.sln  flac-lame-frontend.vcxproj  flac-lame-frontend.vcxproj.filters  progress_taskbar.h  resizer.h  textable.h  treeview.h
c4w/: Controls.cpp  Controls.h  File.cpp  File.h  Net.cpp  Net.h  Resources.cpp  Resources.h  Str.cpp  Str.h  Sys.cpp  Sys.h  Window.cpp  Window.h  WindowDialog.cpp  WindowDialog.h  WindowFrame.cpp  WindowFrame.h  c4w.h
owl/: Controls.cpp  Controls.h  File.cpp  File.h  Internet.cpp  Internet.h  StrUtil.cpp  StrUtil.h  System.cpp  System.h  Window.cpp  Window.h  WindowDialog.cpp  WindowDialog.h  WindowFrame.cpp  WindowFrame.h  owl.h
res/: FlacLameFE.rc  flac-lame-frontend.rc  resource.h  resources.res
resources/: resources.res
src/: Convert.cpp  Convert.h  Converter.cpp  Converter.h  DlgMain.cpp  DlgMain.h  DlgMain_messages.cpp  DlgMain_methods.cpp  DlgRunnin.cpp  DlgRunnin.h  Dlg_Main.cpp  Dlg_Main.h  Dlg_Main_messages.cpp  Dlg_Main_methods.cpp  Dlg_Runnin.cpp  Dlg_Runnin.h  MainDialog.cpp  MainDialog.h  RunninDialog.cpp  RunninDialog.h  WndMain.cpp  WndMain.h  WndRunnin.cpp  WndRunnin.h  convert.cpp  defer.rs  dlg_main.cpp  dlg_main.h  dlg_runnin.cpp  dlg_runnin.h  ids.rs  ini.rs  main.cpp  main.rs  mapped_file.rs  prompt.rs  std.h  util.rs
(+464 files in other folders)
