[package]
name = "flac-lame-frontend"
version = "2.0.0"
authors = ["Rodrigo Cesar de Freitas Dias <rcesar@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
#panic = "abort"

[dependencies]
winsafe = { path = "../winsafe", features = ["shell"] }

# Release build with static linking:
# https://doc.rust-lang.org/reference/linkage.html#static-and-dynamic-c-runtimes
# RUSTFLAGS='-C target-feature=+crt-static' cargo build --release --target x86_64-pc-windows-msvc
