[package]
name = "flac-lame-frontend"
description = "A GUI to work with FLAC and LAME command line tools."
version = "2.1.0"
authors = ["Rodrigo César de Freitas Dias <rcesar@gmail.com>"]
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
#panic = "abort"

[dependencies]
winsafe = { path = "../winsafe", features = ["gui", "version"] }

# https://doc.rust-lang.org/reference/linkage.html#static-and-dynamic-c-runtimes
# RUSTFLAGS='-C target-feature=+crt-static' cargo build --release --target x86_64-pc-windows-msvc
